♻️ Minor refactoring in change stream classes